Issue 3.0 + task with threads + updated xml to json parser